...
  "AboutScreen.links.termsAndConditions.url": "https://paas.sk/en/terms-of-use/",
  "AboutScreen.title": "About",
  "AddParkingCards.addCardsTitle": "Add parking cards",
  "AddParkingCards.codeInputLabel": "Verification code",
  "AddParkingCards.emailField": "Email address",
  "AddParkingCards.Errors.EmailAlreadyVerified": "Email has been added already",
  "AddParkingCards.Errors.GeneralError": "An error occurred",
...
  "Auth.codeInputLabel": "Verification code",
  "Auth.consent": "I confirm my understanding of the [Terms for the Processing of Personal Data](https://paas.sk/ochrana-osobnych-udajov/) and the [Terms and Conditions](https://paas.sk/vseobecne-obchodne-podmienky/) of the PAAS municipal parking application of the Bratislava, Capital City of the Slovak republic. \n\n I'm aware that the parking policy conditions may change under [Decree No. 3/2025
  "Auth.enterPhoneNumber": "Enter phone number",
  "Auth.enterVerificationCode": "Enter 6-digit code",
  "Auth.errors.CodeMismatchException": "Submitted code is invalid",
  "Auth.errors.Error": "An error occurred",
...
  "bloomreachNotifications.result.error.text": "An error occurred during registration. Please try again.",
  "bloomreachNotifications.result.error.title": "Registration failed",
  "bloomreachNotifications.result.success.action": "Continue",
  "bloomreachNotifications.result.success.text": "You will now receive notifications about fines and parking card expirations.",
  "bloomreachNotifications.result.success.title": "Registration successful",
...
  "BoughtTicket.yourTicket": "Your ticket",
  "Common.cancel": "Cancel",
  "Common.goBack": "Go back",
  "Common.hide": "Hide",
  "Common.loading": "Loading",
...
  "LocationBottomSheet.locationOff.title": "Location services is off",
  "LocationBottomSheet.openSettings": "Open settings",
  "MapScreen.openFilters": "Open filter",
  "ModalContainer.closeDialog": "Close modal",
  "Navigation.backToMap": "Back to map",
  "Navigation.continue": "Continue",
  "Navigation.menu": "Menu",
  "Navigation.openMenu": "Open menu",
  "NoConnection.network.text": "Please check your internet connection and try again.",
  "NoConnection.network.title": "No network connection",
...
  "OnboardingScreen.goBack": "Go back",
  "OnboardingScreen.next": "Next",
  "OnboardingScreen.skip": "Skip",
  "OnboardingScreen.slides.bonusCard.text": "Enjoy two hours of free parking in specific zones with the bonus card.",
  "OnboardingScreen.slides.bonusCard.title": "Park 2 hours with a 100% discount every day",
...
  "ParkingCards.remainingCredit": "Remaining credit",
  "ParkingCards.removeEmailCancel": "No, keep email",
  "ParkingCards.removeEmailConfirm": "Yes, remove email",
  "ParkingCards.removeEmailText": "Are you sure you want to remove this email address? Without an email address, it will not be possible to view or use your parking cards.",
  "ParkingCards.removeEmailTitle": "Remove email address",
  "ParkingCards.title": "Parking cards",
  "ParkingCards.type.bonus": "Bonus card",
  "ParkingCards.type.electric-car": "Electric car card",
...
  "PermissionsScreen.location.title": "Location services",
  "PermissionsScreen.notifications.text": "Enable notifications to get alerts for offers and when your parking ends.",
  "PermissionsScreen.notifications.title": "Notifications",
  "PointBottomSheet.fields.address": "Address",
  "PointBottomSheet.fields.addressDetail": "Address detail",
...
  "PurchaseScreen.invalidPaymentLink": "Invalid payment url. Please try again",
  "PurchaseScreen.noPaymentInitiated": "No payment initiated. Please try again",
  "PurchaseScreen.parkingCardModal.actionCancel": "Later",
  "PurchaseScreen.parkingCardModal.actionConfirm": "Add parking cards",
  "PurchaseScreen.parkingCardModal.message": "If you want to use parking cards (for example visitor or bonus), enter the email address to which you received the confirmation of the issuance of the cards in your PAAS account. After confirming the email, you can easily use the cards in the application.",
  "PurchaseScreen.parkingCardModal.title": "Do you have any\n parking cards?",
  "PurchaseScreen.parkingTimeFieldLabel": "Parking duration",
  "PurchaseScreen.pay": "Pay",
  "PurchaseScreen.paymentMethodsFieldLabel": "Payment methods & visitor cards",
  "PurchaseScreen.paymentStatus.failed.payment.text": "Your payment has failed. \nPlease try again.",
...
  "PurchaseScreen.paymentStatus.failed.prolongation.title": "Prolongation failed",
  "PurchaseScreen.paymentStatus.successful.payment.text": "Your parking ticket has been paid.",
  "PurchaseScreen.paymentStatus.successful.payment.title": "Payment successful",
  "PurchaseScreen.paymentStatus.successful.prolongation.text": "Your ticket has been prolonged.",
  "PurchaseScreen.paymentStatus.successful.prolongation.title": "Prolongation successful",
  "PurchaseScreen.pendingText": "Please wait a moment. We are processing your payment.",
  "PurchaseScreen.pendingTitle": "Payment is being processed",
...
  "Settings.type.pushNotificationsToEnd.accessibilityLabel": "Parking ended switch",
  "Settings.type.pushNotificationsToEnd.title": "Push notification after your ticket expires",
  "ShortenTicket.actionConfirm": "Terminate",
  "ShortenTicket.conditions.1": "Early termination of the ticket can be done after 15 minutes from the start of the ticket's validity. If you cancel the ticket earlier, it will be canceled only after 15 minutes.",
  "ShortenTicket.conditions.2": "The parking ticket can be terminated early, the minimum payment amount is 0.05€ (not valid if the ticket was purchased exclusively via a visitor or bonus card).",
  "ShortenTicket.conditions.3": "In case of immediate termination of a parking ticket purchased exclusively through a bonus parking card, a full minute will be deducted from the parking card.",
  "ShortenTicket.conditions.4": "In the event of a parking ticket extension, it will be possible to terminate all ticket extensions.",
  "ShortenTicket.error.actionButtonLabel": "Back",
  "ShortenTicket.failed": "Termination failed",
  "ShortenTicket.failedText": "Your ticket has not been terminated. Please try again.",
...
  "ShortenTicket.mainConditions": "Main conditions",
  "ShortenTicket.success.actionButtonLabel": "Back",
  "ShortenTicket.successful": "Termination successful",
  "ShortenTicket.successfulText": "Your ticket has been terminated.",
  "ShortenTicket.title": "Ticket termination",
...
  "StoreVersionControl.title": "New version available",
  "TicketCard.more": "More",
  "TicketCard.prolong": "Prolong",
  "TicketCard.shorten": "Terminate",
  "Tickets.activeTickets": "Active tickets",
...
  "TicketsFilters.timeframes.thisYear": "This year",
  "TicketsFilters.title": "Filters",
  "TicketsFilters.vehicles": "Vehicles",
  "TimeSelector.addTimeButton": "Add 15 minutes",
  "TimeSelector.custom": "Custom",
...
  "VehiclesScreen.actions.saveAsDefault": "Set as default",
  "VehiclesScreen.addNewVehicle": "Add new vehicle",
  "VehiclesScreen.addVehicle": "Add new",
  "VehiclesScreen.addVehicleConfirmModal.actionConfirm": "Add vehicle",
  "VehiclesScreen.addVehicleConfirmModal.message": "Do you really want to add vehicle {{licencePlate}}?",
...
  "VehiclesScreen.addVehicleTitle": "Add vehicle",
  "VehiclesScreen.chooseOtherOption": "or choose from the list",
  "VehiclesScreen.deleteVehicleConfirmModal.actionConfirm": "Delete vehicle",
  "VehiclesScreen.deleteVehicleConfirmModal.actionReject": "Keep",
  "VehiclesScreen.deleteVehicleConfirmModal.message": "Do you really want to delete vehicle {{licencePlate}}?",
  "VehiclesScreen.deleteVehicleConfirmModal.title": "Delete vehicle",
  "VehiclesScreen.editVehicle.save": "Save",
  "VehiclesScreen.editVehicle.title": "Edit vehicle",
  "VehiclesScreen.licencePlateDuplicate": "Vehicle with this license plate already exists.",
  "VehiclesScreen.licencePlateFieldLabel": "Licence plate",
  "VehiclesScreen.myDefaultVehicle": "Default vehicle",
  "VehiclesScreen.myOtherVehicles": "Other vehicles",
