...
import { clientApi } from '@/modules/backend/client-api'

// TODO remove - this button simulates email verification
const TmpVerifyButton = () => {
  const { tmpVerificationToken, tmpVerificationKey, emailToVerify } = useLocalSearchParams<{
    emailToVerify: string
    tmpVerificationToken: string
    tmpVerificationKey: string
  }>()

  const mutation = useMutation({
    mutationFn: () =>
      clientApi.verifiedEmailsControllerVerifyEmail(
...
