...
        title={email}
        backgroundVariant={parkingCards?.length ? undefined : 'dots'}
        options={{
          headerRight: () => (
            <IconButton
              name="more-horiz"
              testID="emailMoreMenu"
              accessibilityLabel={t('ParkingCards.openEmailActions')}
              onPress={() => bottomSheetRef.current?.present()}
            />
          ),
        }}
      >
...
