...
        enableDynamicSizing
        enablePanDownToClose
        backdropComponent={renderBackdrop}
        animateOnMount={!reducedMotion}
      >
        <BottomSheetContent>
          <PressableStyled testID="deleteEmailBottomSheetPressable" onPress={handleModalOpen}>
            <ActionRow
              variant="negative"
              startIcon="delete"
              label={t('ParkingCards.emailActions.removeEmail')}
            />
          </PressableStyled>
...
