...
          <PressableStyled onPress={handleActionEdit}>
            <ActionRow startIcon="edit" label={t('VehiclesScreen.actions.editVehicle')} />
          </PressableStyled>

          <Divider />

          <PressableStyled testID="deleteVehicleBottomSheetPressable" onPress={handleActionDelete}>
            <ActionRow
              startIcon="delete"
              label={t('VehiclesScreen.actions.deleteVehicle')}
              variant="negative"
            />
          </PressableStyled>
...

      <Modal visible={isModalVisible} onRequestClose={toggleModal}>
        <ModalContentWithActions
          variant="error"
          title={t('VehiclesScreen.deleteVehicleConfirmModal.title')}
          text={t('VehiclesScreen.deleteVehicleConfirmModal.message', {
            licencePlate: activeVehicleLicencePlate,
          })}
          primaryActionLabel={t('VehiclesScreen.deleteVehicleConfirmModal.actionConfirm')}
          primaryActionOnPress={handleConfirmDelete}
          secondaryActionLabel={t('VehiclesScreen.deleteVehicleConfirmModal.actionReject')}
          secondaryActionOnPress={closeModal}
        />
...
