...
                returnKeyType="done"
                onSubmitEditing={handleRequestCaptcha}
              />
            </FlexRow>

            {expectedError ? (
              <Typography testID="expectedError" className="text-negative">
                {translationKeys[expectedError]}
              </Typography>
            ) : null}
          </View>

          <Markdown>{t('Auth.consent')}</Markdown>
...
