...
      if (requestTimeout) {
        clearTimeout(requestTimeout)
      }
    }
  }, [requestTimeout])

  const activeTicketsCount = ticketsData?.tickets.length ?? 0

  return (
    <BottomSheetTopAttachment {...restProps}>
      <FlexRow
        // This allows the user to slide on the map through transparent spaces in this component
        pointerEvents="box-none"
...
