...
      title={t('VehiclesScreen.title')}
      options={{
        presentation: 'modal',
        headerRight: () => (
          <Button
            variant="plain"
            testID="chooseVehicle"
            disabled={
              !!oneTimeLicencePlateError ||
              !((vehicle && !vehicle?.isOneTimeUse) || oneTimeLicencePlate)
            }
            onPress={() => handleChooseVehicle()}
          >
...
      <ScreenContent>
        <AccessibilityField
          label={t('VehiclesScreen.oneTimeUse')}
          errorMessage={oneTimeLicencePlateError}
        >
          <TextInput
            testID="oneTimeVehiclePlate"
            autoCapitalize="characters"
            autoCorrect={false}
            value={oneTimeLicencePlate}
            onChangeText={handleLicencePlateChange}
            hasError={!!oneTimeLicencePlateError}
            maxLength={LICENCE_PLATE_MAX_LENGTH}
...
