...
        <ScrollView>
          {/* TODO better approach - this padding is here to be able to scroll up above bottom sheet */}
          <ScreenContent style={{ paddingBottom: purchaseButtonContainerHeight }}>
            <ParkingZoneField zone={udr} />

            <Field label={t('PurchaseScreen.chooseVehicleFieldLabel')}>
              <Link testID="addVehicle" asChild href={{ pathname: '/purchase/choose-vehicle' }}>
                <PressableStyled>
                  <VehicleFieldControl
                    hasError={showLicencePlateError}
                    vehicle={vehicle?.isOneTimeUse ? vehicle : getVehicle(vehicle?.id)}
                  />
                </PressableStyled>
...
        isLoading={initPaymentMutation.isPending || isDebouncingDuration}
        hasLicencePlateError={showLicencePlateError}
      />

      <Modal visible={isAddCardModalOpen} onRequestClose={handleModalClose}>
        <ModalContentWithActions
          testID="addParkingCardsModal"
          customAvatarComponent={<ParkingCardAvatar />}
          title={t('PurchaseScreen.parkingCardModal.title')}
          text={t('PurchaseScreen.parkingCardModal.message')}
          primaryActionLabel={t('PurchaseScreen.parkingCardModal.actionConfirm')}
          primaryActionOnPress={handleParkingCardRedirect}
          secondaryActionLabel={t('PurchaseScreen.parkingCardModal.actionCancel')}
...
