appId: com.bratislava.paas
---
- launchApp
- waitForAnimationToEnd
- assertVisible: Open menu
- tapOn: Open menu
- tapOn:
    id: Parking cards
- tapOn: Add parking cards
- assertVisible: Email address
- inputText: test-user1@test.sk
- hideKeyboard
- scroll
- tapOn: Continue
- assertVisible:
    id: tmpVerificationToken
- copyTextFrom:
    id: tmpVerificationToken
- inputText: '${maestro.copiedText}'
- tapOn: Continue
- tapOn:
    id: test-user1@test.sk
- tapOn:
    id: emailMoreMenu
- tapOn:
    id: 'deleteEmailBottomSheetPressable'
- tapOn: Yes, remove email
- assertVisible: Add parking cards
- assertNotVisible: test-user1@test.sk
- tapOn: Go back
- tapOn: Go back
