appId: com.bratislava.paas
---
# - launchApp
- waitForAnimationToEnd
- assertVisible: Open menu
- tapOn: Open menu
- tapOn:
    id: Vehicles
- tapOn: Add new
- tapOn:
    id: licencePlate
- inputText: BB222BB
- tapOn: Add new
- extendedWaitUntil:
    visible: BB222BB
    timeout: 5000
- tapOn: Edit vehicle
- tapOn:
    id: deleteVehicleBottomSheetPressable
- tapOn:
    id: Delete vehicle
- assertVisible: No vehicles
- tapOn: Go back
- tapOn: Go back
