appId: com.bratislava.paas
---
- launchApp
- waitForAnimationToEnd
- assertVisible: Skip
- tapOn: Skip
- inputText: '00000000'
# Cannot use `hideKeyboard` on ios because of issue here: https://maestro.mobile.dev/troubleshooting/known-issues#hidekeyboard-command-is-flaky
# So instead we tap on title to hide keyboard
- tapOn: Enter phone number
- waitForAnimationToEnd
- tapOn: Continue
- runFlow:
    when:
      visible:
        id: expectedError
    commands:
      - tapOn: Continue
- tapOn: Verify you are human
- assertVisible: Enter 6-digit code
- inputText: '123456'
- assertVisible: Notifications
- tapOn: Continue
- assertVisible: Open filter
