appId: com.bratislava.paas
---
- launchApp
- waitForAnimationToEnd
- assertVisible:
    id: activeTicketsCount
- waitForAnimationToEnd
- tapOn:
    id: activeTicketsCount
- tapOn: Prolong
- assertVisible: Pay
- tapOn: Pay
- tapOn: Card information
- inputText: '4263970000005262'
- inputText: '0432'
- inputText: '712'
- hideKeyboard
- tapOn: "Pay\_ 2.00\_EUR"
- waitForAnimationToEnd
# Sometimes the payment takes more time
- extendedWaitUntil:
    visible: Prolongation successful
    timeout: 60000
- tapOn: Back to map
