appId: com.bratislava.paas
---
- launchApp
- waitForAnimationToEnd
- assertVisible: Search for a place or address
- tapOn: Search for a place or address
- inputText: S
- tapOn:
    id: '1001'
- waitForAnimationToEnd
- tapOn: Continue
- runFlow:
    when:
      visible:
        id: addParkingCardsModal
    commands:
      - tapOn: 'Later'
- tapOn:
    id: addVehicle
- tapOn:
    id: oneTimeVehiclePlate
- inputText: BB222BR
- tapOn:
    id: chooseVehicle
- assertVisible: Pay
- tapOn: Pay
- assertVisible: Card information
- tapOn: Card information
- inputText: '4263970000005262'
- inputText: '0432'
- inputText: '712'
- hideKeyboard
- tapOn: "Pay\_ 2.00\_EUR"
- waitForAnimationToEnd
# Sometimes the payment takes more time
- extendedWaitUntil:
    visible: Payment successful
    timeout: 60000
- tapOn: Back to map
- assertVisible:
    id: activeTicketsCount
