appId: com.bratislava.paas
---
- launchApp
- waitForAnimationToEnd
- assertVisible:
    id: activeTicketsCount
- waitForAnimationToEnd
- tapOn:
    id: activeTicketsCount
- tapOn: Terminate
- tapOn: Terminate
- assertVisible: Termination successful
- tapOn: Back
- assertNotVisible: Terminate
- tapOn: Go Back
